# FormatConverter

./: .gitignore  Dockerfile  Makefile  README.md  READMEAGENT.md  app.py  docker-compose.yml  env.example  main.py  pyproject.toml  requirements.txt  setup.py  start.sh
src/: __init__.py  __main__.py  app.py  cli.py  config.py  wsgi.py
src/converters/: __init__.py  audio_converter.py  base_converter.py  image_converter.py  video_converter.py
src/routes/: __init__.py  api.py  web.py
src/utils/: __init__.py  ffmpeg_utils.py  file_utils.py
templates/: index.html
tests/: __init__.py  conftest.py  test_converters.py
